# lightgraph-rag-architecture

./: .env.template  .gitignore  README.md  docker-compose.yml  llm.txt
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/models/: conversation.py  document.py  group.py  health.py  query.py
backend/src/routes/: conversations.py  documents.py  groups.py  health.py  query.py
backend/src/services/: conversation_service.py  document_service.py  group_service.py  health_service.py  lightrag_service.py  query_service.py
backend/src/tools/: ollama_client.py  text_extractor.py
data/samples/: pydantic_ai_docs.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: DocumentIngestionPage.tsx  Header.tsx  Layout.tsx  ModelLoadingOverlay.tsx  Sidebar.tsx  index.ts
frontend/src/components/features/: ConversationForm.tsx  ConversationList.tsx  ConversationPanel.tsx  (+6 more)
frontend/src/hooks/: useDocumentIngestionStatus.ts  useModelReadiness.ts
frontend/src/lib/: documentIngestionTask.ts
frontend/src/routes/: __root.tsx  conversations.tsx  groups.tsx  index.tsx  query.tsx
frontend/src/services/: api.ts  conversation.service.ts  document.service.ts  group.service.ts  health.service.ts  index.ts  query.service.ts
frontend/src/stores/: theme.store.ts
frontend/src/types/: index.ts
ollama/: Dockerfile  entrypoint.sh
tests/: README.md
tests/e2e/: backend_e2e.py  run_in_backend_container.sh
(+11 files in other folders)
